test_suite/tests/errors/unknown_transition_target_fallback.rs
use banish::banish;

fn main() {
    banish! {
        @foo
            step ? false { } !? { => @nowhere; }
    }
}
