test_suite/tests/errors/unknown_transition_target_fallback.stderr
error: Unknown state transition `nowhere`. Declare the state or fix the name
 --> tests/errors/unknown_transition_target_fallback.rs:6:39
  |
6 |             step ? false { } !? { => @nowhere; }
  |                                       ^^^^^^^
